# srt-rs

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
libsrt-sys/: Cargo.toml
src/: lib.rs  socket.rs
